--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:085883876588" class="contact-link">085883876588</a>
+              <a href="tel:082210669590" class="contact-link">082210669590</a>
             </div>
 
           </li>
@@ -156,7 +156,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.tiktok.com/@fikriiabdrrhmn?_t=8gXOfHK7zap&_r=1" class="social-link">
+            <a href="https://www.tiktok.com/@ffiiiikkkkk?_t=ZS-8tFdrD0D69K&_r=1" class="social-link">
               <ion-icon name="logo-tiktok"></ion-icon>
             </a>
           </li>
@@ -433,8 +433,9 @@
               <span>2021 — 2022</span>
 
               <p class="timeline-text">
-                Tugas seorang crew store adalah melayani pelanggan, menjaga persediaan, menjalankan kasir, merapikan
-                toko, dan melaporkan hasil.
+                Mencatat transaksi dan menghasilkan laporan harian tentang penjualan dan pembayaran. 
+                Menjaga kebersihan dan keteraturan area kasir. 
+                Berkomunikasi dengan tim penjualan dan manajemen untuk memastikan koordinasi yang baik dalam operasi toko.
               </p>
 
             </li>
@@ -446,8 +447,8 @@
               <span>2022 — 2023</span>
 
               <p class="timeline-text">
-                Tugas operator adalah mengoperasikan mesin untuk membuat produk plastik dengan
-                mengisi cetakan dengan bahan plastik cair.
+                Mengoperasikan mesin injection untuk memproduksi komponen atau produk plastik sesuai dengan spesifikasi yang ditentukan. 
+                Mencatat data produksi dan menghasilkan laporan tentang efisiensi mesin dan kualitas produk
               </p>
 
             </li>
